--- a/config/kazi.yaml
+++ b/config/kazi.yaml
@@ -1,43 +1,101 @@
 # Kazi's Machine Configuration
-# Handles 128x128 islands/voronoi and 256x256 grids
+# Zone Crossing Dataset - ~13,650 runs total
 
 machine_id: kazi
 num_workers: 8
 output_dir: output/kazi
 
 assignments:
-  # 128x128 grid - islands and voronoi (complement istiaq's work)
-  - grid: [128, 128]
-    patterns:
-      - islands
-      - voronoi
-    sa_configs:
-      - long
-      - extra_long
-    seeds:
-      islands: 250
-      voronoi: 400
-    zone_params:
-      num_islands: 5
-      island_size: 16
-      voronoi_k: 5
-
-  # 256x256 grid - all patterns (fewer seeds due to runtime)
-  - grid: [256, 256]
+  # Grid 50x50 (SA: short, medium, long)
+  - grid: [50, 50]
     patterns:
       - left_right
       - stripes
       - islands
       - voronoi
     sa_configs:
+      - short
+      - medium
+      - long
+    seeds:
+      left_right: 875
+      stripes: 225
+      islands: 175
+      voronoi: 300
+
+  # Grid 100x100 (SA: short, medium, long, extra_long)
+  - grid: [100, 100]
+    patterns:
+      - left_right
+      - stripes
+      - islands
+      - voronoi
+    sa_configs:
+      - short
+      - medium
+      - long
       - extra_long
     seeds:
-      left_right: 200
-      stripes: 150
-      islands: 100
+      left_right: 300
+      stripes: 88
+      islands: 75
       voronoi: 150
-    zone_params:
-      num_islands: 6
-      island_size: 24
-      stripe_k: 6
-      voronoi_k: 6
+
+  # Grid 32x32 (SA: short, medium, long)
+  - grid: [32, 32]
+    patterns:
+      - voronoi
+    sa_configs:
+      - short
+      - medium
+      - long
+    seeds:
+      voronoi: 175
+
+  # Grid 64x64 (SA: short, medium, long, extra_long)
+  - grid: [64, 64]
+    patterns:
+      - stripes
+      - islands
+      - voronoi
+    sa_configs:
+      - short
+      - medium
+      - long
+      - extra_long
+    seeds:
+      stripes: 175
+      islands: 150
+      voronoi: 225
+
+  # Grid 32x128 (SA: short, medium, long, extra_long)
+  - grid: [32, 128]
+    patterns:
+      - stripes
+      - islands
+      - voronoi
+    sa_configs:
+      - short
+      - medium
+      - long
+      - extra_long
+    seeds:
+      stripes: 175
+      islands: 150
+      voronoi: 225
+
+  # Grid 32x256 (SA: short, medium, long, extra_long)
+  - grid: [32, 256]
+    patterns:
+      - stripes
+      - islands
+      - voronoi
+    sa_configs:
+      - short
+      - medium
+      - long
+      - extra_long
+    seeds:
+      stripes: 125
+      islands: 88
+      voronoi: 175
