feat: Add training and inference modules with visualization utilities
- Created training module with Hamiltonian loss functions for CNN+RNN optimization.
- Implemented visualization utilities for Hamiltonian path solutions and training progress.
- Added batch scripts for running training and inference with virtual environment setup.
- Included GPU setup script for PyTorch with CUDA support.
- Verified GPU usage with a dedicated script.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,46 @@
+# Virtual environments
+.venv/
+.venv*/
+CCAI/
+nn_venv/
+nn_logs/
+nn_checkpoints/
+nn_data/
+# Python cache
+__pycache__/
+__pycache__
+__pycache__*/
+*.pyc
+*.pyo
+
+# Output directories
+output/
+checkpoints*/
+logs/
+
+# Experiment outputs (prevent future bloat)
+*_output/
+test_*/
+experiment_*/
+
+# Results files
+*.json
+!config/*.yaml
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.idea/
+.vscode/
+*.swp
+
+# Temp files
+*.log
+*.tmp
+nul
+
+# Local config
+config/ansh.yaml
 AGENTS.md
