Add comprehensive evaluation and inference scripts - Added `help.sh` to provide users with an overview of available scripts and their usage. - `make_executable.sh` to ensure all shell scripts are executable. - Introduced `quick_test.sh` for a rapid model inference speed test. - Enhanced training scripts with `resume_training.bat` and `run_training.bat` for Windows, and `run_training.sh` for Linux, to streamline the training process. - Created `setup_nn.bat` for a one-click setup of the neural network environment on Windows.

--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,23 @@
 # Virtual environments
+nn_venv/
 .venv/
 .venv*/
-CCAI/
-nn_venv/
-nn_logs/
-nn_checkpoints/
-nn_data/
+
 # Python cache
 __pycache__/
-__pycache__
-__pycache__*/
 *.pyc
 *.pyo
 
-# Output directories
-output/
-checkpoints*/
-logs/
-
-# Experiment outputs (prevent future bloat)
-*_output/
-test_*/
-experiment_*/
-
-# Results files
-*.json
-!config/*.yaml
+# Large model checkpoints and training data
+FusionModel/nn_checkpoints/
+FusionModel/fusion/fusion_data.pt
+*.pt
 
 # Large dataset files
-combined_dataset.jsonl
+datasets/combined_dataset.jsonl
+
+# Zip archives
+*.zip
 
 # OS files
 .DS_Store
@@ -37,6 +26,7 @@ Thumbs.db
 # IDE
 .idea/
 .vscode/
+.opencode/
 *.swp
 
 # Temp files
@@ -44,6 +34,9 @@ Thumbs.db
 *.tmp
 nul
 
+# Results / output
+*.json
+!config/*.yaml
+
 # Local config
 config/ansh.yaml
-AGENTS.md
